kubernetes/local/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers: 
        - name: gateway-container
          image: localhost:5001/image-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
