kubernetes/local/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers: 
        - name: mongo-container
          image: mongo:3.6
          imagePullPolicy: Always
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  selector:
    app: mongo-db
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      nodePort: 30300
  type: NodePort
