kubernetes/local/ms-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: ms-auth
  template:
      metadata:
        labels:
          app: ms-auth
      spec:
          containers: 
            - name: auth-container
              image: localhost:5001/image-ms-auth
              imagePullPolicy: Always
              ports:
                - containerPort: 8010
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: ms-auth
  ports:
    - port: 80
      targetPort: 8010
      protocol: TCP
  type: ClusterIP
