kubernetes/local/ms-delivery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-deploy
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: ms-delivery
  template:
    metadata:
      labels:
        app: ms-delivery
    spec:
      containers: 
        - name: delivery-container
          image: localhost:5001/image-ms-delivery
          imagePullPolicy: Always
          ports:
            - containerPort: 8040
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-svc
spec:
  selector:
    app: ms-delivery
  ports:
    - port: 80
      targetPort: 8040
      protocol: TCP
  type: ClusterIP
