kubernetes/local/ms-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: ms-order
  template:
    metadata:
      labels:
        app: ms-order
    spec:
          containers: 
            - name: order-container
              image: localhost:5001/image-ms-order
              imagePullPolicy: Always
              ports:
                - containerPort: 8020
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: ms-order
  ports:
    - port: 80
      targetPort: 8020
      protocol: TCP
  type: ClusterIP
