kubernetes/local/ms-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deploy
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: ms-payment
  template:
    metadata:
      labels:
        app: ms-payment
    spec:
          containers: 
            - name: payment-container
              image: localhost:5001/image-ms-payment
              imagePullPolicy: Always
              ports:
                - containerPort: 8030
---
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
spec:
  selector:
    app: ms-payment
  ports:
    - port: 80
      targetPort: 8030
      protocol: TCP
  type: ClusterIP
