kubernetes/local/ms-store.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-deploy
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: ms-store
  template:
    metadata:
      labels:
        app: ms-store
    spec:
        containers: 
          - name: store-container
            image: localhost:5001/image-ms-store
            imagePullPolicy: Always
            ports:
              - containerPort: 8050
---
apiVersion: v1
kind: Service
metadata:
  name: store-svc
spec:
  selector:
    app: ms-store
  ports:
    - port: 80
      targetPort: 8050
      protocol: TCP
  type: ClusterIP
